wistia hairline fix | work image height on mobile

--- a/wp-content/themes/FoundationPress/assets/scss/components/_content.scss
+++ b/wp-content/themes/FoundationPress/assets/scss/components/_content.scss
@@ -200,3 +200,8 @@ pre {
     color: #8148eb;
   }
 }
+
+// Wistia hairline fix
+.bp-2000 {
+  background: $white;
+}
