--- a/wp-content/themes/FoundationPress/assets/scss/components/_posts.scss
+++ b/wp-content/themes/FoundationPress/assets/scss/components/_posts.scss
@@ -5,7 +5,7 @@
     padding-bottom: 36.25%;
     position: relative;
     @include breakpoint(small only) {
-      padding-bottom: 56.25%;
+      padding-bottom: 72%;
     }
   }
   .permalink {
@@ -157,7 +157,7 @@
   .feature-post {
     padding-bottom: 47%;
     @include breakpoint(small only) {
-      padding-bottom: 56.25%;
+      padding-bottom: 72%;
     }
   } // Close Work-Block
 }
